<resources>
    <string name="app_gateway">Gateway</string>
    <string name="auth">authentication</string>
    <string name="userid">UserId</string>
    <string name="verified">Verified</string>
    <string name="join">Join</string>
    <string name="studyId">studyId</string>
    <string name="studyVersion">studyVersion</string>
    <string name="studyStatus">studyStatus</string>
    <string name="try_again">Try Again</string>
    <string name="retry">Retry</string>
    <string name="consentfailuremsgdesc">You answered one or more questions wrong. We want to make sure you understand what this study is about and what is involved. Review the consent information screens and try again.</string>
    <string name="great_job">Great Job!</string>
    <string name="ComprehensionSuccessDesc">You answered all of the questions correctly. Tap Next to continue.</string>
    <string name="comprehension_next_btn">&next_btn;</string>
    <string name="cv_task_exit_activity">&exit_activity;</string>
    <string name="cv_task_endtask">&endtask;</string>
    <string name="cv_task_cancel">&cancel;</string>
    <string name="cv_activity_app_name">&app_name;</string>
    <string name="you_are_eligible">You are Eligible!</string>
    <string name="eligibledesc">Based on the answers you provided, you are eligible to participate in this study. Please click Continue to proceed to the Consent section.</string>
    <string name="continuetxt">Continue</string>
    <string name="ne_activity_not_eligible">&not_eligible;</string>
    <string name="noteligibledesc">Sorry, you are not eligible for participation in this study. We thank you for your interest and time, and encourage you to explore other studies as they are available in the app. </string>
    <string name="ne_activity_ok">&ok_btn;</string>
    <string name="em_step_builder_no_txt">&no_txt;</string>
    <string name="em_step_builder_yes_text">&yes_text;</string>
    <string name="em_step_builder_no_text">&no_text;</string>
    <string name="eligibility_description">Please answer the questions that follow to help ascertain your eligibility for this study.</string>
    <string name="eligibility_title">Eligibility Test</string>
    <string name="gateway_new_user">&new_user;</string>
    <string name="gateway_sign_in_btn">&sign_in_btn;</string>
    <string name="get_started">Get Started</string>
    <string name="notificationCount">NotificationCount</string>
    <string name="the_activity">The activity</string>
    <string name="participation_is_important">will expire in 24 hours. Your participation is important. Please visit the study to complete it now.</string>
    <string name="my_studies">MyStudies</string>
    <string name="now_available_to_take">is now available to take. Please visit the study to complete it.</string>
    <string name="scheduled_activity">A new run of the scheduled activity</string>
    <string name="valid_until">is now available and is valid until</string>
    <string name="participation_is_important2">. Your participation is important. Please visit the study to complete it now.</string>
    <string name="weekly_activity">The current run of the weekly activity</string>
    <string name="new_run">A new run of the weekly activity</string>
    <string name="study_complete">is now available. Please visit the study to complete it.</string>
    <string name="monthly_activity">The current run of the monthly activity</string>
    <string name="expire_in_three_days">will expire in 3 days. Your participation is important. Please visit the study to complete it now.</string>
    <string name="new_run_monthly_activity">A new run of the monthly activity</string>
    <string name="new_run_daily_activity">A new run of the daily activity</string>
    <string name="your_participation_important">is now available. Your participation is important. Please visit the study to complete it now.</string>
    <string name="pendingCount">PendingCount</string>
    <string name="studie_your_enrolled">It\'s been a while since you visited the FDA MyStudies app. Please consider continuing your participation in any studies in which you\'re enrolled.</string>
    <string name="notificatinturnoffnotification">Stay up-to-date! Turn ON notifications and reminders in app and phone settings to get notified about study activity in a timely manner.</string>
    <string name="pendingCountResources">PendingCountResources</string>
    <string name="enter_passcode">Enter a 4-digit passcode</string>
    <string name="enter_passcode_to_access_app">Passcode helps you unlock the app</string>
    <string name="forgot_passcode_signin_again">Forgot Passcode? Sign In again</string>
    <string name="enter_your_passcode">Enter your passcode</string>
    <string name="pass_code_app_name">&app_name;</string>
    <string name="forgotpasscodemsg">You will be signed out and will need to sign in again. Are you sure you want to proceed ?</string>
    <string name="passcode_setup_ok_btn">&ok_btn;</string>
    <string name="passcode_setup_cancel_btn">&cancel;</string>
    <string name="invalidcode">Invalid Code</string>
    <string name="csv_activity_app_name">&app_name;</string>
    <string name="csv_task_exit_activity">&exit_activity;</string>
    <string name="csv_task_endtask">&endtask;</string>
    <string name="csv_task_cancel_btn">&cancel;</string>
    <string name="step_couldnt_add">from step couldn\'t add</string>
    <string name="survey">Survey</string>
    <string name="step_builder_no_txt">&no_txt;</string>
    <string name="step_builder_yes_text">&yes_text;</string>
    <string name="step_builder_no_text">&no_text;</string>
    <string name="enter_time">Enter a Time</string>
    <string name="enter_location">Enter a Location</string>
    <string name="fetalkicktitle">Fetal Kick Counter</string>
    <string name="fetalkickdesc">This activity asks you to record the number of times you feel your baby kick or move in a given amount of time by tapping on the screen each time you feel a kick.</string>
    <string name="true_text">True</string>
    <string name="false_text">False</string>
    <string name="participant_relationship2">Please specify the relationship to your participant</string>
    <string name="participant_first_last_name">Please enter the participant\'s first and last name below</string>
    <string name="participant_first_name2">Participant\'s First Name</string>
    <string name="participant_last_name2">Participant\'s Last Name</string>
    <string name="consent_lars_required">&required;</string>
    <string name="rsb_invalid_answer_default">Invalid answer, try again!</string>
    <string name="rsb_invalid_answer_choice">Please select a value!</string>
    <string name="single_choice_sharing_steps_load_more">Load more</string>
    <string name="consent_builder_no_txt">&no_txt;</string>
    <string name="next1">next</string>
    <string name="review">Review</string>
    <string name="reviewmsg">Review the form below, and tap Agree if you\'re ready to continue</string>
    <string name="consent_builder_signature_form_step">&signature_form_step;</string>
    <string name="first_name1">First Name</string>
    <string name="first_name2">First name</string>
    <string name="last_name1">Last Name</string>
    <string name="last_name2">Last name</string>
    <string name="last_name3">Required</string>
    <string name="first_name3">Required</string>
    <string name="signature">Signature</string>
    <string name="signtitle">Signature</string>
    <string name="signdesc">Please sign using your finger on the line below.</string>
    <string name="notxt">\u0020</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="study_staff_signature">Study Staff Signature(s)</string>
    <string name="relationship_to_participant">(Relationship to Participant)</string>
    <string name="pdf_first_name">(First Name)</string>
    <string name="pdf_last_name">(Last Name)</string>
    <string name="pdf_signature">(Signature)</string>
    <string name="pdf_date">(Date)</string>
    <string name="on_behalf_sign">I am signing the consent form on behalf of the study participant as their legally authorized representative.</string>
    <string name="my_self_sign">I am signing the consent form on behalf of myself.</string>
    <string name="single_choice_text_answer_format_title">The next few steps will capture your informed consent for participation in this study</string>
    <string name="single_choice_text_answer_format_text">Please select the appropriate option below</string>
    <string name="comprehension_title">Comprehension</string>
    <string name="comprehension_detail_text">Let\'s do a quick and simple test of your understanding of this Study.</string>
    <string name="consent_share_data_with1">Share my data with</string>
    <string name="consent_share_data_with2">and qualified researchers worldwide</string>
    <string name="consent_only_share_data_with">Only share my data with</string>
    <string name="consent_lar_text">Consent by a Legally Authorized Representative</string>
    <string name="ccv_task_activity_unable_to_parse">&unable_to_parse;</string>
    <string name="ccv_task_activity_participant">&participant;</string>
    <string name="ccv_task_activity_agree_participate_reasearch_study">&agree_participate_research_study;</string>
    <string name="ccv_task_activity_participans_name">&participans_name;</string>
    <string name="ccv_task_activity_participants_signature">&participants_signature;</string>
    <string name="ccv_task_activity_date">&date;</string>
    <string name="ccv_task_activity_not_able_create_pdf">&not_able_create_pdf;</string>
    <string name="ccv_task_activity_cancel_btn">&cancel;</string>
    <string name="participants_signature_lar">Signature</string>
    <string name="end_task">End Task</string>
    <string name="exit_message">Are you sure you want to exit?</string>
    <string name="ccv_task_activity_signature_form_step">SIGNATURE_FORM_STEP</string>
    <string name="ccv_task_alert_dialog_message">Sorry, this study does not allow you to proceed for the selection you just made. Click OK to quit enrolling for the study or Cancel to change your selection.</string>
    <string name="ccv_task_alert_dialog_ok_btn">&ok_btn;</string>
    <string name="ccv_task_alert_dialog_cancle_btn">&cancel;</string>
    <string name="ccv_task_participant_first_name">Participant first name:</string>
    <string name="ccv_task_participant_last_name">Participant last name:</string>
    <string name="ccv_task_server_error">Unable to enroll into the study.</string>
    <string name="start_walking">Start walking</string>
    <string name="count_sensor_not_available">Count sensor not available!</string>
    <string name="stop_walking">stop walking</string>
    <string name="stop_in_between">Stopping in between</string>
    <string name="kick_count">TOTAL KICK COUNT</string>
    <string name="record_kick">TAP TO RECORD A KICK</string>
    <string name="start_timer">TAP TO START TIMER</string>
    <string name="recording">recording</string>
    <string name="stopping">stopping</string>
    <string name="aqb_cancel">&cancel;</string>
    <string name="aqb_ok">&ok_btn;</string>
    <string name="clear"> Clear</string>
    <string name="feets">ft</string>
    <string name="inches">in</string>
    <string name="cm">CM</string>
    <string name="search_token">token</string>
    <string name="search_keyword">keyword</string>
    <string name="upgrade_app_activity_upgrade_message1">New Version Available</string>
    <string name="upgrade_app_activity_upgrade_message2">Please update to the latest version of the app to continue.</string>
    <string name="upgrade_app_activity_update_caps">UPDATE</string>
    <string name="search">Search</string>
    <string name="search_study_by">Search study by</string>
    <string name="search_cancel">Cancel</string>
    <string name="edit">Edit</string>
</resources>