<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.harvard.UpgradeAppActivity">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/fda_logo2" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:textStyle="bold"
        android:layout_marginTop="70dp"
        android:text="@string/upgrade_app_activity_upgrade_message1"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimaryBlack"
        android:textSize="22dp"/>
    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="15dp"
        android:textColor="@color/colorPrimaryBlack"
        android:textSize="20dp"
        android:text="@string/upgrade_app_activity_upgrade_message2"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/upgrade"
        style="@style/TextType2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_black_white"
        android:gravity="center"
        android:textAllCaps="true"
        android:text="@string/upgrade_app_activity_update_caps"
        android:textColor="@color/colorPrimary"/>
</RelativeLayout>
