<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:clickable="false"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <RelativeLayout
            android:id="@+id/mToolBarLayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:visibility="visible">

            <RelativeLayout
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingBottom="10dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/menu_icn" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/mTitleFDAListens"
                style="@style/TextType2"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/backBtn"
                android:text=""
                android:textColor="@color/colorPrimary" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/mTitle"
                style="@style/TextType2"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text=""
                android:textColor="@color/colorPrimaryBlack" />

            <RelativeLayout
                android:id="@+id/editBtnLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:visibility="gone">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/editBtnLabel"
                    style="@style/TextType3"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/edit"
                    android:textColor="@color/colorSecondary" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/mNotificationBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/mNotificationIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/notification_grey"
                    android:visibility="visible" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/notificatioStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/mNotificationIcon"
                    android:background="@drawable/bullet_blue"
                    android:visibility="gone" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/mInfoIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/mInfoIconImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/info"
                    android:visibility="visible" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/mFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:layout_toLeftOf="@id/mNotificationBtn"
                android:visibility="visible">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/mFilterImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/filter1"
                    android:visibility="visible" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/mSearchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:layout_toLeftOf="@id/mFilter"
                android:visibility="visible">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/mSearchImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/search_big"
                    android:visibility="visible" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mSearchToolBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/mCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/searchMainLay"
                android:layout_alignTop="@+id/searchMainLay"
                android:layout_alignParentRight="true"
                android:paddingLeft="5dp"
                android:gravity="center"
                android:text="@string/search_cancel"
                android:textColor="@color/colorSecondary"
                android:textSize="15sp" />

            <!--<Switch
                android:id="@+id/searchSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryBlack"
                android:theme="@style/BrandedSwitch.control"
                android:text="Search Token"/>-->
            <TextView
                android:id="@+id/switchtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textColor="@color/colorPrimaryBlack"
                android:textSize="16dp"
                android:text="@string/search_study_by"/>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/searchSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/switchtext"
                android:background="@null"
                android:button="@drawable/searchswitch"
                android:thumb="@null"
                app:track="@null"/>
            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/searchSwitch"
                android:layout_alignRight="@+id/searchSwitch"
                android:layout_alignTop="@+id/searchSwitch"
                android:layout_alignBottom="@+id/searchSwitch"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tokenText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="16dp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/search_token"/>
                <TextView
                    android:id="@+id/keywordText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="16dp"
                    android:maxLines="2"
                    android:textColor="@color/colorSecondary"
                    android:gravity="center"
                    android:text="@string/search_keyword"/>
            </LinearLayout>
            <RelativeLayout
                android:id="@+id/searchMainLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/searchSwitch"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/mCancel">

                <RelativeLayout
                    android:id="@+id/mSearchLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/rectangle_border_search_study">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/mSearchIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/search1" />

                    <RelativeLayout
                        android:id="@+id/mClearLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:paddingLeft="5dp"
                        android:paddingRight="10dp"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:visibility="gone">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/mClearIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:background="@drawable/clear_text" />
                    </RelativeLayout>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/mSearchEditText"
                        style="@style/filterEditText"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:layout_toLeftOf="@id/mClearLayout"
                        android:layout_toRightOf="@id/mSearchIcon"
                        android:maxLength="500"
                        android:hint="@string/search"
                        android:imeOptions="actionSearch"
                        android:inputType="text" />

                </RelativeLayout>
            </RelativeLayout>

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/hrLine1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorSecondaryBg" />

    <FrameLayout
        android:id="@+id/frameLayoutContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

    </FrameLayout>

</LinearLayout>
